--- a/src/components/entry-page/entry-page.style.css
+++ b/src/components/entry-page/entry-page.style.css
@@ -1,18 +1,13 @@
-
-
 .jumbotron {
-
-    background-image: url('https://raw.githubusercontent.com/ragnhildneset/plan-your-holiday-frontend/master/src/img/Prague.jpg');
-    height: 350px;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position:center fixed;
-    text-align: center;
-    margin-bottom: 0px;
-    background-position: 0% 25%;
-    color: white;
-    text-shadow: black 0.3em 0.3em 0.3em;
+      text-align: center;
+      margin-bottom: 0px;
+      background-position: 0% 25%;/
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      color: white;
+      text-shadow: black 0.3em 0.3em 0.3em;
+      background: rgba(100, 100, 100, 0.3);
 }
 
 .jumbotron .container {
@@ -24,7 +19,7 @@
     text-shadow: none;
 }
 .box {
-    border-radius: 3px;
+    border-radius: 10px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     padding: 10px 25px;
     text-align: right;
@@ -33,7 +28,9 @@
     width:250px;
     display: inline-block;
     height: 300px;
-    background-color: #ffffff
+    background-color: #ffffff ;
+
+
 
 
 }
@@ -41,9 +38,9 @@
     background-color: rgb(0, 50, 100);
     border-radius: 50%;
     display: table;
-    height: 100px;
+    height: 90px;
     margin: 0 auto;
-    width: 100px;
+    width: 90px;
     margin-top: -61px;
     text-align: center;
 }
@@ -66,6 +63,7 @@
     font-size: 16px;
     padding-top: 10px;
     text-align: justify;
+
 }
 .info > a {
     background-color: #03a9f4;
@@ -82,9 +80,10 @@
 }
 
 .full-background-image {
+  background-image: url('https://raw.githubusercontent.com/ragnhildneset/plan-your-holiday-frontend/master/src/img/Prague.jpg');
 
 
-  height: 160%;
+  height: 140%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
@@ -92,3 +91,22 @@
   background-color: #bdbdbd;
 
 }
+.jumbotron2 {
+
+  margin-bottom: 0px;
+  background-position: 0% 25%;/
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 10px;
+
+  background: rgba(100, 100, 100, 0.5);
+}
+.navbar-fixed-bottom {
+position: relative!important;
+color: rgb(200, 200, 200);
+background-color: rgb(0, 50, 100);
+border-color: rgb(0, 50, 100);
+color: rgb(200, 200, 200);
+margin-bottom: 0;
+ }
