--- a/src/components/entry-page/entry-page.template.html
+++ b/src/components/entry-page/entry-page.template.html
@@ -31,29 +31,25 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-
-  <body>
-
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="full-background-image">
+<body>
+<!-- Main jumbotron for a primary marketing message or call to action -->
+  <div class="full-background-image">
     <div class="jumbotron">
       <div class="container">
         <h1>Plan Your Holiday!</h1>
-        <p>Plan Your Holiday is the best Single-Page Web Application in the World.</p>
-
+        <p class="lead">Plan Your Holiday is the best Single-Page Web Application in the World.</p>
       </div>
     </div>
-
-
-<div class="container">
-<div class="row">
-  <div class="col-sm-12">
+    <br>
+    <br>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
     <div class="row">
       <div class="col-md-3">
         <div class="box">
                   <div class="box-icon">
-                      <span class="fa fa-5x fa-heart"></span>
+                      <span class="fa fa-4x fa-heart"></span>
                   </div>
                   <div class="info">
                       <h4 class="text-center">Individual Experiences</h4>
@@ -65,7 +61,7 @@
       <div class="col-md-3">
         <div class="box">
                   <div class="box-icon">
-                      <span class="fa fa-5x fa-calendar" aria-hidden="true" ></span>
+                      <span class="fa fa-4x fa-calendar" aria-hidden="true" ></span>
                   </div>
                   <div class="info">
                       <h4 class="text-center">Efficient Scheduling</h4>
@@ -77,7 +73,7 @@
       <div class="col-md-3">
         <div class="box">
                  <div class="box-icon">
-                     <span class=" fa fa-5x fa-star" ></span>
+                     <span class=" fa fa-4x fa-star" ></span>
                  </div>
                  <div class="info">
                      <h4 class="text-center">Feedback</h4>
@@ -89,7 +85,7 @@
       <div class="col-md-3">
         <div class="box">
                  <div class="box-icon">
-                     <span class="fa fa-5x fa-gift" ></span>
+                     <span class="fa fa-4x fa-gift" ></span>
                  </div>
                  <div class="info">
                      <h4 class="text-center">Advantages</h4>
@@ -102,83 +98,68 @@
     </div>
     <br>
     <br>
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="row">
-            <div class="col-md-3 ">
-          <div class="main-login main-center">
-        <form method="post" action="#">
+    <div class="jumbotron2">
+    <div class="container-fluid">
+              <form method="post" action="#">
+                <div class="col-md-6 form-line">
+                  <div class="form-group">
+                    <h3 class="cols-sm-2 control-label">Enter your Account details</h3>
+                  </div>
+                  <div class="form-group">
+                    <label for="username" class="cols-sm-2 control-label">Username</label>
+                    <div class="input-group">
+                      <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                      <input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username"/>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="password" class="cols-sm-2 control-label">Password</label>
+                    <div class="input-group">
+                      <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                      <input type="password" class="form-control" name="password" id="password" ng-model="$ctrl.login.password"  placeholder="Enter your Password"/>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                  <p> <small> Forgot password? </small></p>
+                 </div>
+                  <div class="form-group">
+                    <button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit(); $ctrl.main()">Login</button>
+			               </div>
 
-          <div class="form-group">
-            <h3 class="cols-sm-2 control-label">Enter your Account details</h3>
-          </div>
+                   </div>
 
-          <div class="form-group">
-            <label for="username" class="cols-sm-2 control-label">Username</label>
-            <div class="cols-sm-10">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                <input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username"/>
+
+
+                   <div class="col-md-6 form-line">
+                     <div class="form-group">
+                       <h3 class="control-label">Register now for free!</h3>
+                       <br>
+                       <br>
+                       <br>
+                       <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="$ctrl.getStarted()">Register</button>
+                     </div>
+                   </div>
+                 </form>
               </div>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label for="password" class="cols-sm-2 control-label">Password</label>
-            <div class="cols-sm-10">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                <input type="password" class="form-control" name="password" id="password" ng-model="$ctrl.login.password"  placeholder="Enter your Password"/>
               </div>
-            </div>
-          </div>
 
-          <div class="form-group ">
-            <button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit(); $ctrl.main()">Login</button>
-          </div>
-          <div class="login-register">
-            <p> <small> Don't have an account yet? </small></p>
-            <a ng-click="$ctrl.getStarted()">Register</a>
-          </div>
-        </form>
 
-      </div>
+
+
+
 
     </div><!--/row-->
 
-    <div class="col-xs-6">
-      <div class="form-group">
-                      <p class="lead">Register now for <span class="text-success">FREE</span></p>
-                      <ul class="list-unstyled" style="line-height: 2">
-                          <li><span class="fa fa-check text-success"></span> See all your orders</li>
-                          <li><span class="fa fa-check text-success"></span> Shipping is always free</li>
-                          <li><span class="fa fa-check text-success"></span> Save your favorites</li>
-                          <li><span class="fa fa-check text-success"></span> Fast checkout</li>
-                          <li><span class="fa fa-check text-success"></span> Get a gift <small>(only new customers)</small></li>
-                          <li><span class="fa fa-check text-success"></span>Holiday discounts up to 30% off</li>
-                      </ul>
-                      <p><a href="./Register.jsp" class="btn btn-info btn-block">Yes please, register now!</a></p>
-                  </div>
-                  </div>
+
   </div><!--/col-12-->
 </div><!--/row-->
 </div>
-<br>
-<br>
-<br>
-<br>
 
-
-
-
-
-    </div> <!-- /container -->
-
-
+</div> <!-- /container -->
     <nav class="navbar navbar-default navbar-fixed-bottom">
       <div class="container">
         <footer>
-          <p>&copy; 2016 Company, Inc.</p>
+          <p>&copy; 2017 Company, Inc.</p>
         </footer>
       </div>
     </nav>
