--- a/src/components/entry-page/entry-page.template.html
+++ b/src/components/entry-page/entry-page.template.html
@@ -45,57 +45,6 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-    <div class="row">
-      <div class="col-md-3">
-        <div class="box">
-                  <div class="box-icon">
-                      <span class="fa fa-4x fa-heart"></span>
-                  </div>
-                  <div class="info">
-                      <h4 class="text-center">Individual Experiences</h4>
-                      <p>Plan your holiday adjust Your holiday to Your individual preferences and expectations</p>
-                      <!-- <a href="" class="btn">Link</a> -->
-                  </div>
-              </div>
-      </div>
-      <div class="col-md-3">
-        <div class="box">
-                  <div class="box-icon">
-                      <span class="fa fa-4x fa-calendar" aria-hidden="true" ></span>
-                  </div>
-                  <div class="info">
-                      <h4 class="text-center">Efficient Scheduling</h4>
-                      <p>A generated schedule based on your personal preferences will maximize the experience of your holdiay and yield an optimal timetable according to your interests</p>
-                      <!-- <a href="" class="btn">Link</a> -->
-                  </div>
-              </div>
-      </div>
-      <div class="col-md-3">
-        <div class="box">
-                 <div class="box-icon">
-                     <span class=" fa fa-4x fa-star" ></span>
-                 </div>
-                 <div class="info">
-                     <h4 class="text-center">Feedback</h4>
-                     <p>A broad database fed and fostered by users who share there experiences and evaluate offers from the sight of a fellow traveler</p>
-                     <!-- <a href="" class="btn">Link</a> -->
-                 </div>
-             </div>
-      </div>
-      <div class="col-md-3">
-        <div class="box">
-                 <div class="box-icon">
-                     <span class="fa fa-4x fa-gift" ></span>
-                 </div>
-                 <div class="info">
-                     <h4 class="text-center">Advantages</h4>
-                     <p>Enjoy great boni by subscribing to the premium model of the service in order to unlock the perfect travelling experience</p>
-                     <!-- <a href="" class="btn">Link</a> -->
-                 </div>
-             </div>
-
-      </div>
-    </div>
     <br>
     <br>
     <div class="jumbotron2">
@@ -123,7 +72,7 @@
                   <p> <small> Forgot password? </small></p>
                  </div>
                   <div class="form-group">
-                    <button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit(); $ctrl.main()">Login</button>
+                    <button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.login()">Login</button>
 			               </div>
 
                    </div>
@@ -141,6 +90,58 @@
                    </div>
                  </form>
               </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-3">
+                  <div class="box">
+                            <div class="box-icon">
+                                <span class="fa fa-4x fa-heart"></span>
+                            </div>
+                            <div class="info">
+                                <h4 class="text-center">Individual Experiences</h4>
+                                <p>Plan your holiday adjust Your holiday to Your individual preferences and expectations</p>
+                                <!-- <a href="" class="btn">Link</a> -->
+                            </div>
+                        </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="box">
+                            <div class="box-icon">
+                                <span class="fa fa-4x fa-calendar" aria-hidden="true" ></span>
+                            </div>
+                            <div class="info">
+                                <h4 class="text-center">Efficient Scheduling</h4>
+                                <p>A generated schedule based on your personal preferences will maximize the experience of your holdiay and yield an optimal timetable according to your interests</p>
+                                <!-- <a href="" class="btn">Link</a> -->
+                            </div>
+                        </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="box">
+                           <div class="box-icon">
+                               <span class=" fa fa-4x fa-star" ></span>
+                           </div>
+                           <div class="info">
+                               <h4 class="text-center">Feedback</h4>
+                               <p>A broad database fed and fostered by users who share there experiences and evaluate offers from the sight of a fellow traveler</p>
+                               <!-- <a href="" class="btn">Link</a> -->
+                           </div>
+                       </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="box">
+                           <div class="box-icon">
+                               <span class="fa fa-4x fa-gift" ></span>
+                           </div>
+                           <div class="info">
+                               <h4 class="text-center">Advantages</h4>
+                               <p>Enjoy great boni by subscribing to the premium model of the service in order to unlock the perfect travelling experience</p>
+                               <!-- <a href="" class="btn">Link</a> -->
+                           </div>
+                       </div>
+
+                </div>
               </div>
 
 
