--- a/src/components/category-selection/category-selection.template.html
+++ b/src/components/category-selection/category-selection.template.html
@@ -1,10 +1,127 @@
 <div class="full-background-image">
   <header class="jumbotron">
      <div class="inner cover">
-        <h1 class="cover-heading">Select Categories</h1>
+        <h1 class="cover-heading">What would you like to visit!</h1>
         <p>Select your Category Preferences for the upcoming trips</p>
       </div>
    </header>
 
+   <div class="container" center>
+    <div class="container">
+       <div class="row">
+           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+               <div class="box3">
+                   <div class="info">
+                       <h4 class="text-center">Category1</h4>
+                   </div>
+               </div>
+            </div>
 
-</div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                <div class="box3">
+                    <div class="info">
+                        <h4 class="text-center">Categorye2</h4>
+                    </div>
+                </div>
+            </div>
+
+           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+             <br>
+             <br>
+             <div class="input-group">
+               <input type="text" class="form-control" placeholder="Search">
+               <span class="input-group-btn">
+                 <button class="btn btn-default fa fa-search" type="button" ></button>
+               </span>
+             </div><!-- /input-group -->
+           </div>
+           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+             <br>
+             <br>
+             <div class="input-group">
+               <input type="text" class="form-control" placeholder="Search">
+               <span class="input-group-btn">
+                 <button class="btn btn-default fa fa-search" type="button" ></button>
+               </span>
+             </div><!-- /input-group -->
+           </div>
+           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+             <div class="checkbox">
+            <label><input type="checkbox" value="">Option 1</label>
+          </div>
+          <div class="checkbox">
+            <label><input type="checkbox" value="">Option 2</label>
+          </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="checkbox">
+           <label><input type="checkbox" value="">Option 1</label>
+         </div>
+         <div class="checkbox">
+           <label><input type="checkbox" value="">Option 2</label>
+         </div>
+         </div>
+     </div>
+   </div>
+
+   <div class="container">
+      <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+              <div class="box3">
+                  <div class="info">
+                      <h4 class="text-center">Category3</h4>
+                      <!-- <a href="" class="btn">Link</a> -->
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+              <div class="box3">
+                  <div class="info">
+                      <h4 class="text-center">Category4</h4>
+                  </div>
+              </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <br>
+            <br>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search">
+              <span class="input-group-btn">
+                <button class="btn btn-default fa fa-search" type="button" ></button>
+              </span>
+            </div><!-- /input-group -->
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <br>
+            <br>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search">
+              <span class="input-group-btn">
+                <button class="btn btn-default fa fa-search" type="button" ></button>
+              </span>
+            </div><!-- /input-group -->
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="checkbox">
+           <label><input type="checkbox" value="">Option 1</label>
+         </div>
+         <div class="checkbox">
+           <label><input type="checkbox" value="">Option 2</label>
+         </div>
+         </div>
+         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+           <div class="checkbox">
+          <label><input type="checkbox" value="">Option 1</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" value="">Option 2</label>
+        </div>
+        </div>
+
+
+    </div>
+   </div>
+   
+
+   </div>
