--- a/src/components/category-selection/category-selection.template.html
+++ b/src/components/category-selection/category-selection.template.html
@@ -1,127 +1,109 @@
-<div class="full-background-image">
-  <header class="jumbotron">
-     <div class="inner cover">
-        <h1 class="cover-heading">What would you like to visit!</h1>
-        <p>Select your Category Preferences for the upcoming trips</p>
-      </div>
-   </header>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
 
-   <div class="container" center>
-    <div class="container">
-       <div class="row">
-           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-               <div class="box3">
+    <!-- Bootstrap -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="node_modules/bootstrap-slider/dist/css/bootstrap-slider.min.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="full-background-image">
+      <header class="jumbotron">
+         <div class="inner cover">
+            <h1 class="cover-heading">What would you like to visit!</h1>
+            <p>Select your Category Preferences for the upcoming trips</p>
+          </div>
+       </header>
+       <body style="margin: 0; border: 0;">
+
+         <table style="border: 0; width: 100%;">
+         <tr> <td colspan="2">
+           <div class="container">
+             <div class="row">
+               <div class="col-md-3">
+                 <div class="box3">
                    <div class="info">
-                       <h4 class="text-center">Category1</h4>
-                   </div>
+                     <h4 class="text-center">Monuments</h4>
+                               <!-- <a href="" class="btn">Link</a> -->
+                  </div>
                </div>
-            </div>
+               </div>
+               <div class="col-md-3">
+                 <div class="box4">
 
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <div class="box3">
-                    <div class="info">
-                        <h4 class="text-center">Categorye2</h4>
-                    </div>
-                </div>
-            </div>
+                           <div class="info">
+                             <h4 class="text-center">Museums</h4>
+                               <!-- <a href="" class="btn">Link</a> -->
+                           </div>
+                       </div>
+               </div>
+               <div class="col-md-3">
+                 <div class="box5">
 
-           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-             <br>
-             <br>
-             <div class="input-group">
-               <input type="text" class="form-control" placeholder="Search">
-               <span class="input-group-btn">
-                 <button class="btn btn-default fa fa-search" type="button" ></button>
-               </span>
-             </div><!-- /input-group -->
+                   <div class="info">
+                     <h4 class="text-center">Parks</h4>
+                      
+                       <input id="ex7" type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="5" data-slider-enabled="false"/>
+                       <input id="ex7-enabled" type="checkbox"/> Enabled
+
+                              <!-- <a href="" class="btn">Link</a> -->
+                          </div>
+                      </div>
+               </div>
+               <div class="col-md-3">
+                 <div class="box6">
+
+                   <div class="info">
+                     <h4 class="text-center">Churches</h4>
+                              <!-- <a href="" class="btn">Link</a> -->
+                          </div>
+                      </div>
+
+               </div>
+             </div>
            </div>
-           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-             <br>
-             <br>
-             <div class="input-group">
-               <input type="text" class="form-control" placeholder="Search">
-               <span class="input-group-btn">
-                 <button class="btn btn-default fa fa-search" type="button" ></button>
-               </span>
-             </div><!-- /input-group -->
-           </div>
-           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-             <div class="checkbox">
-            <label><input type="checkbox" value="">Option 1</label>
-          </div>
-          <div class="checkbox">
-            <label><input type="checkbox" value="">Option 2</label>
-          </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="checkbox">
-           <label><input type="checkbox" value="">Option 1</label>
-         </div>
-         <div class="checkbox">
-           <label><input type="checkbox" value="">Option 2</label>
-         </div>
-         </div>
-     </div>
-   </div>
+         </td>
+         </tr>
+         <tr>
+           <td style="width: 25%; background: #658C00;">Navigation
+           </td>
 
-   <div class="container">
-      <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-              <div class="box3">
-                  <div class="info">
-                      <h4 class="text-center">Category3</h4>
-                      <!-- <a href="" class="btn">Link</a> -->
-                  </div>
-              </div>
-          </div>
-
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-              <div class="box3">
-                  <div class="info">
-                      <h4 class="text-center">Category4</h4>
-                  </div>
-              </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <br>
-            <br>
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search">
-              <span class="input-group-btn">
-                <button class="btn btn-default fa fa-search" type="button" ></button>
-              </span>
-            </div><!-- /input-group -->
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <br>
-            <br>
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search">
-              <span class="input-group-btn">
-                <button class="btn btn-default fa fa-search" type="button" ></button>
-              </span>
-            </div><!-- /input-group -->
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="checkbox">
-           <label><input type="checkbox" value="">Option 1</label>
-         </div>
-         <div class="checkbox">
-           <label><input type="checkbox" value="">Option 2</label>
-         </div>
-         </div>
-         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-           <div class="checkbox">
-          <label><input type="checkbox" value="">Option 1</label>
-        </div>
-        <div class="checkbox">
-          <label><input type="checkbox" value="">Option 2</label>
-        </div>
-        </div>
+           <td style="width: 75%; background: #FFA100;"> <div class="container" center>
 
 
-    </div>
-   </div>
-   
+          </td>
+         </tr>
+        </table>
 
-   </div>
+
+       </body>  <!-- hier ist das Ende des Elements Wrapper -->
+
+
+       </div>
+
+
+
+
+
+
+
+
+
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/js/bootstrap.min.js"></script>
+    <script src="node_modules/bootstrap-slider/dist/bootstrap-slider.min.js"></script>
+    <script>
+    $("#ex7").slider();
+    </script>
+  </body>
+</html>
